engine/crates/grafbase-engine/src/registry/resolvers/graphql/snapshots/grafbase_engine__registry__resolvers__graphql__serializer__tests__field_directives@query { foo @include(if true) @exclude(if 42) }.snap
---
source: common/grafbase_engine/src/registry/resolvers/graphql/serializer.rs
expression: serialize(input)
---
query {
	foo @include(if: true) @exclude(if: 42)
}

