engine/crates/grafbase-engine/src/registry/resolvers/graphql/snapshots/grafbase_engine__registry__resolvers__graphql__serializer__tests__inline_fragment@query { ... on Foo @deprecated { baz } }.snap
---
source: common/grafbase_engine/src/registry/resolvers/graphql/serializer.rs
expression: serialize(input)
---
query {
	... on Foo @deprecated {
		__typename
		baz
	}
}

